hitexas.log
Traceback (most recent call last):
  File "/home/qj2004/GraphSHA/main.py", line 10, in <module>
    from args import parse_args
  File "/home/qj2004/GraphSHA/args.py", line 6
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/qj2004/GraphSHA/main.py", line 10, in <module>
    from args import parse_args
  File "/home/qj2004/GraphSHA/args.py", line 6
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/qj2004/GraphSHA/main.py", line 10, in <module>
    from args import parse_args
  File "/home/qj2004/GraphSHA/args.py", line 6
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/qj2004/GraphSHA/main.py", line 10, in <module>
    from args import parse_args
  File "/home/qj2004/GraphSHA/args.py", line 6
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/qj2004/GraphSHA/main.py", line 10, in <module>
    from args import parse_args
  File "/home/qj2004/GraphSHA/args.py", line 6
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
